--- a/index.html
+++ b/index.html
@@ -208,6 +208,8 @@ ul{
                 <a href="https://loadingball.netlify.app/ " target="_blank"><i class="fas fa-laptop-code text-dark"></i> Ball Loading Animation</a></li><br>
                 <a href="https://loadingannimation.netlify.app/ " target="_blank"><i class="fas fa-laptop-code text-dark"></i>Loading Animation</a></li><br>
                 <a href="https://weatherapplication1234.netlify.app/" target="_blank"><i class="fas fa-laptop-code text-dark"></i> Weather-App</a></li><br>
+                <a href="https://maharashtrastateapi.netlify.app/" target="_blank"><i class="fas fa-laptop-code text-dark"></i> Maharashtra-Covid19-Update</a></li><br>
+
                 <a href="https://pratikshadigitalclock.netlify.app/ " target="_blank"><i class="fas fa-laptop-code text-dark"></i> Digital-Clock</a></li><br>
                 <a href="https://pratikshagodbole.github.io/To-doProject.github.io/" target="_blank"><i class="fas fa-laptop-code text-dark"></i>Todo-List JS</a></li><br>
                 <a href="https://stately-fox-75926c.netlify.app/ " target="_blank"><i class="fas fa-laptop-code text-dark"></i> Authentication Login-Logout</a></li><br>
