--- a/index.html
+++ b/index.html
@@ -208,9 +208,14 @@ ul{
                 <a href="https://weatherapplication1234.netlify.app/" target="_blank"><i class="fas fa-laptop-code text-dark"></i> Weather-App</a></li><br>
                 <a href="https://maharashtrastateapi.netlify.app/" target="_blank"><i class="fas fa-laptop-code text-dark"></i> Maharashtra-Covid19-Update</a></li><br>
 
+                <a href="https://calculatorpratiksha.netlify.app/ " target="_blank"><i class="fas fa-laptop-code text-dark"></i> Calculator JS</a></li><br>
                 <a href="https://pratikshadigitalclock.netlify.app/ " target="_blank"><i class="fas fa-laptop-code text-dark"></i> Digital-Clock</a></li><br>
+
+                <a href="https://tictactoegamepratiksha.netlify.app/ " target="_blank"><i class="fas fa-laptop-code text-dark"></i> TicTacToeGame</a></li><br>
+
                 <a href="https://pratikshagodbole.github.io/To-doProject.github.io/" target="_blank"><i class="fas fa-laptop-code text-dark"></i> Todo-List JS </a></li><br>
                 <a href="https://authenticationflipkart.netlify.app/" target="_blank"><i class="fas fa-laptop-code text-dark"></i> Authentication Login-Logout</a></li><br>
+                <a href="https://studentrecordliveapi.netlify.app/" target="_blank"><i class="fas fa-laptop-code text-dark"></i> CRUD Application with Live API</a></li><br>
                 <a href="https://mernstack-finalproject.netlify.app/" target="_blank"><i class="fas fa-laptop-code text-dark"></i> MERN-APP live API</a></li><br>
                 
                 Note: React Project will update and also final project working on it.
