--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ ul{
                         </p>
                         <p class="text">
                             <i class="fab fa-linkedin contact-icons"></i>
-                            <a href="https://www.linkedin.com/in/pratiksha-godbole-664439203" target="_blank">linkedin.com/in/pratiksha-godbole-664439203</a>
+                            <a href="https://www.linkedin.com/in/pratiksha-godbole-664439203" target="_blank">https://www.linkedin.com/in/pratiksha-godbole-664439203/</a>
                         </p>
                     
         </header>
