--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ ul{
 
         <section>
             <h6 class="section-title bg-subtle-warning">Projects</h6>
-                <a href = "https://provide-details.netlify.app/" target="_blank"><i class="fas fa-laptop-code text-dark"></i> Form-Details</a><br>
+                <a href = "https://blinkit-clone-pratiksha.netlify.app/" target="_blank"><i class="fas fa-laptop-code text-dark"></i> Blinkit-Clone</a><br>
                 <a href="https://amazonclonehtmlcssproject.netlify.app/" target="_blank"><i class="fas fa-laptop-code text-dark"></i> Amazon - Clone</a><br>
                 
                 <a href="https://weatherapplication1234.netlify.app/" target="_blank"><i class="fas fa-laptop-code text-dark"></i> Weather-App</a></li><br>
@@ -212,9 +212,11 @@ ul{
                 <a href="https://pratikshadigitalclock.netlify.app/ " target="_blank"><i class="fas fa-laptop-code text-dark"></i> Digital-Clock</a></li><br>
 
                 <a href="https://tictactoegamepratiksha.netlify.app/ " target="_blank"><i class="fas fa-laptop-code text-dark"></i> TicTacToeGame</a></li><br>
+                <a href="https://reactgameapppratiksha.netlify.app/ " target="_blank"><i class="fas fa-laptop-code text-dark"></i> React-Game</a></li><br>
 
                 <a href="https://pratikshagodbole.github.io/To-doProject.github.io/" target="_blank"><i class="fas fa-laptop-code text-dark"></i> Todo-List JS </a></li><br>
-                <a href="https://authenticationflipkart.netlify.app/" target="_blank"><i class="fas fa-laptop-code text-dark"></i> Authentication Login-Logout</a></li><br>
+                <a href="https://authentication-flipkart-clone.netlify.app/" target="_blank"><i class="fas fa-laptop-code text-dark"></i> Authentication Login-Logout</a></li><br>
+                <a href="https://pratiksha-react-captone-project.netlify.app/" target="_blank"><i class="fas fa-laptop-code text-dark"></i>Ecommerce-App</a></li><br>
                 <a href="https://studentrecordliveapi.netlify.app/" target="_blank"><i class="fas fa-laptop-code text-dark"></i> CRUD Application with Live API</a></li><br>
                 <a href="https://mernstack-finalproject.netlify.app/" target="_blank"><i class="fas fa-laptop-code text-dark"></i> MERN-APP live API</a></li><br>
                 
